--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,14 @@
     <string name="app_name">Hygeia</string>
     <string name="app_name_lower">hygeia</string>
     <string name="app_name_upper">HYGEIA</string>
-    <string name="app_version">Version</string>
+    <string name="app_version">Copyright © 2023. Hygeia. All rights reserved.</string>
     <string name="app_catchphrase">Your access to your hygiene \n vendo buddy</string>
     <string name="logo_desc">Main Logo</string>
 
     <string name="btn_login">Login</string>
     <string name="btn_create_account">Create an account</string>
     <string name="btn_forgot_password">Forgot your password?</string>
+    <string name="btn_forgot_password_underlined"><u>Forgot your password?</u></string>
 
     <string name="hint_email">Enter email</string>
     <string name="hint_password">Enter password</string>
