--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Hygeia</string>
     <string name="app_name_lower">hygeia</string>
     <string name="app_name_upper">HYGEIA</string>
@@ -9,8 +9,21 @@
     <string name="btn_login">Login</string>
     <string name="btn_create_account">Create an account</string>
     <string name="btn_forgot_password">Forgot your password?</string>
-    <string name="btn_forgot_password_underlined"><u>Forgot your password?</u></string>
+    <string name="btn_continue">Continue</string>
 
     <string name="hint_email">Enter email</string>
     <string name="hint_password">Enter password</string>
+    <string name="hint_full_name">Enter full name</string>
+    <string name="hint_phone_number">Enter phone number</string>
+
+    <string name="heading_create_account">Let\'s create your</string>
+
+    <!--SINGLE WORD-->
+    <string name="account">account</string>
+
+    <!--SPECIFIC ACTIVITIES-->
+
+    <!--CREATE ACCOUNT ACTIVITY-->
+    <string name="pg_num_1" tools:ignore="TypographyFractions">1/2</string>
+    <string name="pg_num_2">2⁄2</string>
 </resources>
