--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="validate_password_format">Password must be at least 8 characters long with combinations of uppercase letters, lowercase letters, numbers, and symbols.</string>
     <string name="validate_password_matched">Passwords do not match.</string>
     <string name="validate_password_criteria">Password does not match the criteria.</string>
+    <string name="validate_age_permission">Sorry, our app is only available for users 11 years old and above.</string>
+    <string name="validate_phone_format">The phone number you entered is invalid.</string>
+    <string name="validate_phone_taken">This phone number is already in use.</string>
 
     <!--DIALOG-->
     <string name="placeholder_dialog_title">Dialog Title</string>
