--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,7 +53,7 @@
     <string name="validate_password_format">Password must be at least 8 characters long with combinations of uppercase letters, lowercase letters, numbers, and symbols.</string>
     <string name="validate_password_matched">Passwords do not match.</string>
     <string name="validate_password_criteria">Password does not match the criteria.</string>
-    <string name="validate_age_permission">Sorry, our app is only available for users 11 years old and above.</string>
+    <string name="validate_age_permission">Sorry, you must be at least 11 years old to use this application.</string>
     <string name="validate_phone_format">The phone number you entered is invalid.</string>
     <string name="validate_phone_taken">This phone number is already in use.</string>
 
@@ -61,6 +61,7 @@
     <string name="placeholder_dialog_title">Dialog Title</string>
     <string name="placeholder_dialog_body">Dialog content</string>
     <string name="dlg_no_wifi">It looks like you are not connected to the internet. Be sure to connect to your Wi-Fi in order to log in.</string>
+    <string name="dlg_success_create_account">Wonderful! You have successfully created your personal account and can now access your vendo buddy, Hygeia!</string>
 
     <!--SPECIFIC ACTIVITIES-->
     <!--CREATE ACCOUNT ACTIVITY-->
@@ -69,7 +70,6 @@
     <string name="pg_num_3">3 of 3</string>
 
     <!--ARRAYS-->
-
     <string-array name="arr_gender">
         <item>Mr.</item>
         <item>Ms.</item>
